dark mode corrected, top shadow bug fixed

--- a/public/css/customer.css
+++ b/public/css/customer.css
@@ -8,7 +8,7 @@
 .dark{
     background-color: #333;
 }
-.shadow{
+.darkShadow{
     box-shadow: 0 0px 20px 0px rgba(0, 0, 0, 0.25);
 }
 .whiteShadow{
